tab issue fixes, checkbox alignments

--- a/app/design/frontend/Shopcsn/Store/web/css/source/style/_home.less
+++ b/app/design/frontend/Shopcsn/Store/web/css/source/style/_home.less
@@ -644,9 +644,11 @@
             }
         }
     }
+
     .page-products,
     body .page-wrapper .product-widget__wrapper,
-    .block-products-list {
+    .block-products-list,
+    .cms-page-view {
         .products-grid {
             .product-item {
                 padding: 5px;
